<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <Button
        android:id="@+id/updateCommoditiyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="64dp"
        android:paddingTop="12dp"
        android:paddingRight="64dp"
        android:paddingBottom="12dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:icon="@drawable/ic_uil_save"
        app:iconGravity="end"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:strokeColor="#037FD9"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView6"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/edit_commodity"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextCommodityName2"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextCommodityName2"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_cube"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16" />

    <EditText
        android:id="@+id/editTextNumber3"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_layers_alt"
        android:ems="10"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextManufacturer2"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16" />

    <EditText
        android:id="@+id/editTextTextManufacturer2"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_uil_building"
        android:ems="10"
        android:hint="@string/manufacturer"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal2"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_yen_circle"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextLocation2"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16" />

    <EditText
        android:id="@+id/editTextTextLocation2"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableStart="@drawable/ic_uil_location_pin_alt"
        android:ems="10"
        android:hint="@string/storage_location"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/updateCommoditiyButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>