<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addCommoditiyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="64dp"
        android:paddingTop="12dp"
        android:paddingRight="64dp"
        android:paddingBottom="12dp"
        android:text="@string/add_commodity"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:icon="@drawable/ic_uil_truck_loading"
        app:iconGravity="end"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:strokeColor="#037FD9"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/rightLine2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:text="@string/actions"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/viewCommoditiesButton"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/viewCommoditiesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FFFFFF"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/view_commodities"
        android:textAllCaps="false"
        android:textColor="#898989"
        android:textSize="16sp"
        app:icon="@drawable/ic_uil_box"
        app:iconGravity="textEnd"
        app:iconTint="#898989"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/addCommoditiyButton"
        app:layout_constraintStart_toStartOf="@+id/addCommoditiyButton"
        app:strokeColor="#898989"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/greetingtextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="Hello World!"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/new_commodity"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextCommodityName"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/greetingtextTV" />

    <EditText
        android:id="@+id/editTextTextCommodityName"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_cube"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/editTextTextManufacturer"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_uil_building"
        android:ems="10"
        android:hint="@string/manufacturer"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/editTextTextLocation"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ic_uil_location_pin_alt"
        android:ems="10"
        android:hint="@string/storage_location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addCommoditiyButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_yen_circle"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextLocation"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/editTextNumber2"
        style="@style/defaultedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_uil_layers_alt"
        android:ems="10"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextManufacturer"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>